# TMPExample

./: .clang-format  CMakeLists.txt  constexpr_string.h  miscellaneous.h  typename.h
test/: constexpr_string_test.cpp  miscellaneous_test.cpp  typename_test.cpp
